--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
    <head>
       <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
       <link rel="stylesheet" href="style.css">
       <link rel="icon" href="pictures/favicon.ico">
-      <script src="" defer></script>
       <title>Contact Information</title>
    </head>
    <body>
@@ -22,7 +22,7 @@
          <table class="heading">
             <tr>
                <td>
-                  <a href="index.md">
+                  <a href="index.html">
                      <img src="pictures/placeholderphoto.jpg" alt="alaskan ice cave">
                   </a>
                </td>
