--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
    <head>
       <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
       <link rel="stylesheet" href="style.css">
       <link rel="icon" href="pictures/favicon.ico">
-      <script src="" defer></script>
-
       <title>Homepage</title>
    </head>
    <body>
