--- a/projects/loginwave_project/index.html
+++ b/projects/loginwave_project/index.html
@@ -15,7 +15,7 @@
     <title>Login Page</title>
   </head>
   <body>
-    <a href="/index.html" id="back">Back</a>
+    <a href="index.html" id="back">Back</a>
     <div class="container">
       <h1>Please Login</h1>
       <form>
