repathed v3 all projects to /index.hmtl (probably not going to work still)

--- a/projects/MonsterKiller/index.html
+++ b/projects/MonsterKiller/index.html
@@ -10,7 +10,7 @@
     <script src="assets/scripts/app.js" defer></script>
   </head>
   <body>
-    <a href="index.html" id="back">Back</a>
+    <a href="/index.html" id="back">Back</a>
     <section id="health-levels">
       <h2>MONSTER HEALTH</h2>
       <progress id="monster-health" max="100" value="100">100%</progress>
