--- a/projects/dadjokes_project/index.html
+++ b/projects/dadjokes_project/index.html
@@ -15,7 +15,7 @@
     <title>Dad Jokes</title>
   </head>
   <body>
-    <a href="index.html" id="back">Back</a>
+    <a href="/index.html" id="back">Back</a>
 <div class="container">
   <h3>Are these even funny?</h3>
   <div id="joke" class="joke">Click the Button to get a Joke!</div>
