--- a/projects/faq_project/index.html
+++ b/projects/faq_project/index.html
@@ -15,7 +15,7 @@
     <title>FAQ Project</title>
   </head>
   <body>
-    <a href="/index.html" id="back">Back</a>
+    <a href="https://harrysiv.github.io/resume/" id="back">Back</a>
     <h1>Frequently Asked Questions</h1>
     <div class="faq-container">
       <div class="faq">
