--- a/projects/loginwave_project/index.html
+++ b/projects/loginwave_project/index.html
@@ -15,7 +15,7 @@
     <title>Login Page</title>
   </head>
   <body>
-    <a href="https://harrysiv.github.io/resume/" id="back">Back</a>
+    <a href="https://harrysiv.github.io/resume/"><div id="back">Back</div></a>
     <div class="container">
       <h1>Please Login</h1>
       <form>
