--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
                   <a href="index.html" class="bar">Home</a>
                </td>
                <td>
-                  <a href="contact.html" class="bar">Contact Me</a>
+                  <a href="contact.html" class="bar">About</a>
                </td>
             </tr>
          </table>
@@ -27,7 +27,7 @@
                   </a>
                </td>
                <td>
-                  <h1>HARRY SANDERS IV </h1> 
+                  <h1>HARRY SANDERS IV</h1> 
                   <p><em>Seeking an entry level computer programming position 
                      <br>Daytona State College - Associates of Arts
                      <br>Udemy
