--- a/projects/faq_project/index.html
+++ b/projects/faq_project/index.html
@@ -19,9 +19,9 @@
     <h1>Frequently Asked Questions</h1>
     <div class="faq-container">
       <div class="faq">
-        <h3 class="faq-title">Why shouldn't we trust atoms?</h3>
+        <h3 class="faq-title">Ok, so an Assosciate's Degree and "Udemy"... explain.</h3>
         <p class="faq-text">
-          They make up everything, obviously. Who thought this was clever?
+          Right, I took an HTML class in highschool and a C programming class in college. I really enjoyed those classes and heard about Udemy through a friend. At this point I have done probably over 100 hours of videos on HTML, CSS, C, JavaScript, etc. I really started getting serious about coding in August of 2021. 
         </p>
         <button class="faq-toggle">
           <i class="fas fa-chevron-down"></i>
@@ -29,9 +29,9 @@
         </button>
       </div>
       <div class="faq">
-        <h3 class="faq-title">Insert cringey set up here.</h3>
+        <h3 class="faq-title">Why computer programming?</h3>
         <p class="faq-text">
-          Insert cringey punch line here. 
+          If I had to sum myself up in a few words it's adaptable and inquisitive. I really enjoy learning new things and have always enjoyed working on/with computers. I really feel that coding is something I understand naturally and look forward to making a career out of it. Challenging myself if how I keep myself going.
         </p>
         <button class="faq-toggle">
           <i class="fas fa-chevron-down"></i>
@@ -39,9 +39,9 @@
         </button>
         </div>
         <div class="faq">
-          <h3 class="faq-title">What's brown and sticky?</h3>
+          <h3 class="faq-title">What other skills do you have?</h3>
           <p class="faq-text">
-            A stick
+            Quite a few, including managment skills. I possess many soft skills neccesary for effective communication and am capable of working well in any team dynamic. I'm a friendly person and get along with all types. 
           </p>
           <button class="faq-toggle">
             <i class="fas fa-chevron-down"></i>
@@ -49,9 +49,49 @@
           </button>
         </div>
         <div class="faq">
-          <h3 class="faq-title">If I had a nickel for every compliment I've recieved from a random stranger</h3>
+          <h3 class="faq-title">What're you looking for in an employer?</h3>
           <p class="faq-text">
-            I'd have a nickel.
+            I'm really looking for an employer that offers a decent benefit package as well a company that's willing to support me in becoming a more proficient coder. I would like to eventually go back to college and complete at least a Bachelors', so support there would be greatly appreciated as well.
+          </p>
+          <button class="faq-toggle">
+            <i class="fas fa-chevron-down"></i>
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+        <div class="faq">
+          <h3 class="faq-title">Why should we hire you over x, y, z person?</h3>
+          <p class="faq-text">
+            Let me be upfront, I'm not as experienced as many other people out there. However, I'm a fast learner and I enjoy challenging myself, sometimes to the extreme as I have perfectionist tendacies. To put it simply, I don't blame employers for hiring those with the most experience, but I would certainly be a missed opportunity if that were the case. Help me help  you and we'll both come out on top.
+          </p>
+          <button class="faq-toggle">
+            <i class="fas fa-chevron-down"></i>
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+        <div class="faq">
+          <h3 class="faq-title">Tell me about a hardship you had and how you overcame it.</h3>
+          <p class="faq-text">
+            Believe me when I say, I've had many a hardships, work related and otherwise. But I suppose I should be specific. At my first Chick-Fil-A, I had moved up from team member to Night Manager. I was in charge of closing, but I also had other responsibilities, including helping roll out CFA's new Drive-Thru order taking system. It was tough to be sure, we had to get new equipment and test out different ways to organize this system, as well as look online to see what other CFA's were doing to improve it. I created excel spreadsheets to track out service times hour by hour and we (as a team) would experiment relentlessly to see what worked and what didn't, as well as where our bottlenecks lied and why. Basically, I tried to bring useful data to the situation and was adaptive and flexible in solving the problem until we had some of the best Drive-Thru times in the company.
+          </p>
+          <button class="faq-toggle">
+            <i class="fas fa-chevron-down"></i>
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+        <div class="faq">
+          <h3 class="faq-title">What's with the iceberg/explain your intent with the design.</h3>
+          <p class="faq-text">
+            Basically, I wanted something minimalistic but "refreshing". I really like icebergs, don't ask me why, I just find them cool (no pun intended?). So it seemed like a simple design that would be fun and enjoyable for myself.
+          </p>
+          <button class="faq-toggle">
+            <i class="fas fa-chevron-down"></i>
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+        <div class="faq">
+          <h3 class="faq-title">What about the projects, like this one?</h3>
+          <p class="faq-text">
+            The projects are mostly assingments or parts of bigger lessons where I coded while watching/listening. Could I recreate all of them? Yea, it might take me some time, but I get the idea for the most part. 
           </p>
           <button class="faq-toggle">
             <i class="fas fa-chevron-down"></i>
