Proofread my FAQ's

--- a/projects/faq_project/index.html
+++ b/projects/faq_project/index.html
@@ -19,9 +19,9 @@
     <h1>Frequently Asked Questions</h1>
     <div class="faq-container">
       <div class="faq">
-        <h3 class="faq-title">Ok, so an Assosciate's Degree and "Udemy"... explain.</h3>
+        <h3 class="faq-title">Ok, so an Associate's Degree and "Udemy"... explain.</h3>
         <p class="faq-text">
-          Right, I took an HTML class in highschool and a C programming class in college. I really enjoyed those classes and heard about Udemy through a friend. At this point I have done probably over 100 hours of videos on HTML, CSS, C, JavaScript, etc. I really started getting serious about coding in August of 2021. 
+          Right, I took an HTML class in high school and a C programming class in college. I really enjoyed those classes and heard about Udemy through a friend. At this point I have done probably over 100 hours of videos on HTML, CSS, C, JavaScript, etc. I started getting serious about coding in August of 2021. 
         </p>
         <button class="faq-toggle">
           <i class="fas fa-chevron-down"></i>
@@ -31,7 +31,7 @@
       <div class="faq">
         <h3 class="faq-title">Why computer programming?</h3>
         <p class="faq-text">
-          If I had to sum myself up in a few words it's adaptable and inquisitive. I really enjoy learning new things and have always enjoyed working on/with computers. I really feel that coding is something I understand naturally and look forward to making a career out of it. Challenging myself if how I keep myself going.
+          If I had to sum myself up in a few words, they would be adaptable and inquisitive. I enjoy learning new things and have always enjoyed working on/with computers. I genuinely feel that coding is a skill that comes to me naturally and look forward to making a career out of it. Challenging myself if how I keep myself going.
         </p>
         <button class="faq-toggle">
           <i class="fas fa-chevron-down"></i>
@@ -41,7 +41,7 @@
         <div class="faq">
           <h3 class="faq-title">What other skills do you have?</h3>
           <p class="faq-text">
-            Quite a few, including managment skills. I possess many soft skills neccesary for effective communication and am capable of working well in any team dynamic. I'm a friendly person and get along with all types. 
+            Quite a few, including management skills. I possess many soft skills necessary for effective communication and am capable of working well in any team dynamic. I'm a friendly person and get along with all types. 
           </p>
           <button class="faq-toggle">
             <i class="fas fa-chevron-down"></i>
@@ -61,7 +61,7 @@
         <div class="faq">
           <h3 class="faq-title">Why should we hire you over x, y, z person?</h3>
           <p class="faq-text">
-            Let me be upfront, I'm not as experienced as many other people out there. However, I'm a fast learner and I enjoy challenging myself, sometimes to the extreme as I have perfectionist tendacies. To put it simply, I don't blame employers for hiring those with the most experience, but I would certainly be a missed opportunity if that were the case. Help me help  you and we'll both come out on top.
+            Let me be upfront, I'm not as experienced as many other people out there. However, I'm a fast learner and I enjoy challenging myself, sometimes to the extreme as I have perfectionist tendencies. To put it simply, I don't blame employers for hiring those with the most experience, but I would certainly be a missed opportunity if that were the case. Help me help you and we'll both come out on top.
           </p>
           <button class="faq-toggle">
             <i class="fas fa-chevron-down"></i>
@@ -71,7 +71,7 @@
         <div class="faq">
           <h3 class="faq-title">Tell me about a hardship you had and how you overcame it.</h3>
           <p class="faq-text">
-            Believe me when I say, I've had many a hardships, work related and otherwise. But I suppose I should be specific. At my first Chick-Fil-A, I had moved up from team member to Night Manager. I was in charge of closing, but I also had other responsibilities, including helping roll out CFA's new Drive-Thru order taking system. It was tough to be sure, we had to get new equipment and test out different ways to organize this system, as well as look online to see what other CFA's were doing to improve it. I created excel spreadsheets to track out service times hour by hour and we (as a team) would experiment relentlessly to see what worked and what didn't, as well as where our bottlenecks lied and why. Basically, I tried to bring useful data to the situation and was adaptive and flexible in solving the problem until we had some of the best Drive-Thru times in the company.
+            At my first Chick-Fil-A, I had moved up from team member to Night Manager. I oversaw closing the store most nights, but I also had other responsibilities, including helping roll out CFA's new Drive-Thru order taking system. It was tough to be sure, we had to get new equipment and test out different ways to organize this system, as well as look online to see what other CFA's were doing to improve it. I created excel spreadsheets to track out service times hour by hour and we (as a team) would experiment relentlessly to see what worked and what didn't, as well as where our bottlenecks lied and why. Basically, I tried to bring useful data to the situation and was adaptive and flexible in solving the problem until we had some of the best Drive-Thru times in the company.
           </p>
           <button class="faq-toggle">
             <i class="fas fa-chevron-down"></i>
@@ -91,7 +91,7 @@
         <div class="faq">
           <h3 class="faq-title">What about the projects, like this one?</h3>
           <p class="faq-text">
-            The projects are mostly assingments or parts of bigger lessons where I coded while watching/listening. Could I recreate all of them? Yea, it might take me some time, but I get the idea for the most part. 
+            The projects are mostly assignments or parts of bigger lessons where I coded while watching/listening. Could I recreate all of them? Yea, it might take me some time, but I get the idea for the most part. 
           </p>
           <button class="faq-toggle">
             <i class="fas fa-chevron-down"></i>
