--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
          <h2>Languages: JavaScript, HTML, CSS, C</h2><br>
          <h2>Example Projects</h2>
          <div class="flex">
+            <a class="link" href="projects/react-app/"><div class="projects">Expenses Tracker</div></a>
             <a class="link" href="projects/dadjokes_project/index.html"><div class="projects">Get a Dad joke</div></a>
             <a class="link" href="projects/loginwave_project/index.html"><div class="projects">Login Form</div></a>
             <a class="link" href="projects/faq_project/index.html"><div class="projects">FAQ</div></a>
