added 'React' to languages known

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                </tr>
             </tbody>
          </table><br>
-         <h2>Languages: JavaScript, HTML, CSS, C</h2><br>
+         <h2>Languages: React, JavaScript, HTML, CSS, C</h2><br>
          <h2>Example Projects</h2>
          <div class="flex">
             <a class="link" href="https://harrysiv.github.io/react-deploy/"><div class="projects">Expenses Tracker</div></a>
