adding background cards to projects and form

--- a/contact.html
+++ b/contact.html
@@ -41,24 +41,25 @@
                <li>E-Mail: harry.sandersiv@yahoo.com <em> (preferred)</em></li>
                <li><a href="https://www.linkedin.com/in/harrysandersiv/">LinkedIn</a></li>
             </ul>
-
-            <form action="mailto:harry.sandersiv@yahoo.com" method="post" enctype="text/plain">
-               <table>
-                  <tr>
-                     <td><label for="">Your Name:</label></td>
-                     <td><input type="text" name="yourName" required> </td>
-                  </tr>
-                  <tr>
-                     <td><label for="">E-mail:</label></td>
-                     <td><input type="email" name="yourEmail" required></td>
-                  </tr>
-                  <tr>
-                     <td><label for="">Message:</label></td>
-                     <td><textarea name="yourMessage" cols="22" rows="5"></textarea></td>
-                  </tr>
-               </table>
-               <input type="submit">
-            </form>
+            <div class="projects_card">
+               <form action="mailto:harry.sandersiv@yahoo.com" method="post" enctype="text/plain">
+                  <table>
+                     <tr>
+                        <td><label for="">Your Name:</label></td>
+                        <td><input type="text" name="yourName" required> </td>
+                     </tr>
+                     <tr>
+                        <td><label for="">E-mail:</label></td>
+                        <td><input type="email" name="yourEmail" required></td>
+                     </tr>
+                     <tr>
+                        <td><label for="">Message:</label></td>
+                        <td><textarea name="yourMessage" cols="20" rows="4"></textarea></td>
+                     </tr>
+                  </table>
+                  <input type="submit">
+               </form>
+            </div>
          </div>
    </body>
 </html>
