--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
          </table><br>
          <h2>Languages: React, JavaScript, HTML, CSS, C</h2><br>
          <h2>Example Projects</h2>
-         <div class="flex">
-            <a class="link" href="https://harrysiv.github.io/react-deploy/"><div class="projects">Expenses Tracker</div></a>
-            <a class="link" href="projects/dadjokes_project/index.html"><div class="projects">Get a Dad joke</div></a>
-            <a class="link" href="projects/loginwave_project/index.html"><div class="projects">Login Form</div></a>
-            <a class="link" href="projects/faq_project/index.html"><div class="projects">FAQ</div></a>
-            <a class="link" href="projects/MonsterKiller/index.html"><div class="projects">Monster Killer</div></a>
+         <div class="projects_card">
+            <div class="flex">
+               <a class="link" href="https://harrysiv.github.io/react-deploy/"><div class="projects">Expenses Tracker</div></a>
+               <a class="link" href="projects/dadjokes_project/index.html"><div class="projects">Get a Dad joke</div></a>
+               <a class="link" href="projects/loginwave_project/index.html"><div class="projects">Login Form</div></a>
+               <a class="link" href="projects/faq_project/index.html"><div class="projects">FAQ</div></a>
+               <a class="link" href="projects/MonsterKiller/index.html"><div class="projects">Monster Killer</div></a>
+            </div>
          </div>
       </div>
       <p class="copyright">© 2021 Harry Sanders.</p>
