added heavy updates to Dice game, removing bugs and creating a working text box

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
          <div class="projects_card">
             <div class="flex">
                <a class="link" href="https://harrysiv.github.io/react-deploy/"><div class="projects">Expenses Tracker</div></a>
+               <a class="link" href="projects/Dice/index.html"><div class="projects">D&D</div></a>
                <a class="link" href="projects/dadjokes_project/index.html"><div class="projects">Get a Dad joke</div></a>
                <a class="link" href="projects/loginwave_project/index.html"><div class="projects">Login Form</div></a>
                <a class="link" href="projects/faq_project/index.html"><div class="projects">FAQ</div></a>
