added projects page and included a bio on the home page

--- a/contact.html
+++ b/contact.html
@@ -9,16 +9,21 @@
    </head>
    <body>
       <div class="container">
-         <table class="navigation">
-            <tr>
-               <td>
-                  <a href="index.html" class="bar">Home</a>
-               </td>
-               <td>
-                  <a href="contact.html" class="bar">About</a>
-               </td>
-            </tr>
-         </table>
+         <nav>
+            <table class="navigation">
+               <tr>
+                  <td>
+                     <a href="index.html" class="bar">Home</a>
+                  </td>
+                  <td>
+                     <a href="contact.html" class="bar">Contact Me</a>
+                  </td>
+                  <td>
+                     <a href="projects.html" class="bar">Projects</a>
+                  </td>
+               </tr>
+            </table>
+         </nav>
          <table class="heading">
             <tr>
                <td>
@@ -61,5 +66,6 @@
                </form>
             </div>
          </div>
+         <p class="copyright">© 2021 Harry Sanders.</p>
    </body>
 </html>
