--- a/projects/MonsterKiller/index.html
+++ b/projects/MonsterKiller/index.html
@@ -10,7 +10,7 @@
     <script src="assets/scripts/app.js" defer></script>
   </head>
   <body>
-    <a href="https://harrysiv.github.io/resume/"><div id="back">Back</div></a>
+    <a href="/resume/index.html"><div id="back">Back</div></a>
     <section id="health-levels">
       <h2>MONSTER HEALTH</h2>
       <progress id="monster-health" max="100" value="100">100%</progress>
