--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
    </head>
    <body>
       <div class="container">
-         <table class="navigation">
-            <tr>
-               <td>
-                  <a href="index.html" class="bar">Home</a>
-               </td>
-               <td>
-                  <a href="contact.html" class="bar">Contact Me</a>
-               </td>
-            </tr>
-         </table>
-         <h1>HARRY SANDERS IV</h1> 
+         <nav>
+            <table class="navigation">
+               <tr>
+                  <td>
+                     <a href="index.html" class="bar">Home</a>
+                  </td>
+                  <td>
+                     <a href="contact.html" class="bar">Contact Me</a>
+                  </td>
+                  <td>
+                     <a href="projects.html" class="bar">Projects</a>
+                  </td>
+               </tr>
+            </table>
+      </nav>
+         <h1 id="mainTitle">HARRY SANDERS IV</h1> 
          <p><em>Seeking an entry level computer programming position 
             <br>Daytona State College - Associates of Arts
             <br>Udemy
@@ -28,37 +33,19 @@
       </div>
          <hr>
          <div class="altcontainer">
-         <br><br><br><br><br><br><br><br><br><br><br><br>
-         <table id="table_experience">
-            <caption><strong>Work Experience</strong></caption>
-            <thead>
-               <tr>
-                  <th class="experience">Dates</th>
-                  <th class="experience">Work</th>
-               </tr>
-            </thead>
-            <tbody>
-               <tr>
-                  <td class="experience">2019 - Present</td>
-                  <td class="experience">Associate @ Panera Bread</td>
-               </tr>
-               <tr>
-                  <td class="experience">2015 ~ 2019</td>
-                  <td class="experience">Manager @ Chick-Fil-A</td> 
-               </tr>
-            </tbody>
-         </table><br>
-         <h2>Languages: React, JavaScript, HTML, CSS, C</h2><br>
-         <h2>Example Projects</h2>
-         <div class="projects_card">
-            <div class="flex">
-               <a class="link" href="https://harrysiv.github.io/react-deploy/"><div class="projects">Expenses Tracker</div></a>
-               <a class="link" href="projects/Dice/index.html"><div class="projects">D&D</div></a>
-               <a class="link" href="projects/dadjokes_project/index.html"><div class="projects">Get a Dad joke</div></a>
-               <a class="link" href="projects/loginwave_project/index.html"><div class="projects">Login Form</div></a>
-               <a class="link" href="projects/faq_project/index.html"><div class="projects">FAQ</div></a>
-               <a class="link" href="projects/MonsterKiller/index.html"><div class="projects">Monster Killer</div></a>
-            </div>
+         <h2 class="languages">Languages: React, JavaScript, HTML, CSS, C</h2><br>
+         <h3>Welcome to my website! The purpose of this website is to showcase my ability as a developer and the progress I achieve. Please, if you have any feedback, do not hesitate to contact me. 
+            <br><br>
+            I originally went to college with the intent on acquiring a Bachelor's in Engineering, and therefore have taken quite a few math and engineering classes over the years. 
+            However, during the pandemic, I stopped pursuing a college degree for the meantime in order to learn various languages and become a developer. 
+            <br><br>
+            I find myself passionate about learning coding and enjoy applying myself and building projects and websites. I do intend to continue my education, 
+            although I believe a Bachelor's and perhaps a Masters in Computer Science is in my future. I have learned so much as I am a fast and flexible learner, 
+            and fully intend to master many different languages in hopes of eventually becoming a full-stack developer. 
+            <br><br>
+            If I choose to accept a position you offer, I can garuntee that I will regualarly impress you with my progress. There is nothing I love more than a good challenge. 
+            Thank you for taking the time to read about myself, and I hope to work with you in the future!
+         </h3>
          </div>
       </div>
       <p class="copyright">© 2021 Harry Sanders.</p>
