updated project list to include react projects

--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,9 @@
          <h2>Example Projects</h2>
          <div class="projects_card">
             <div class="flex">
-               <a class="link" href="https://harrysiv.github.io/fetchstudents-app/"><div class="projects">Expenses Tracker</div></a>
+               <a class="link" href="https://harrysiv.github.io/fetchstudents-app/"><div class="projects">Students App</div></a>
+               <a class="link" href="https://harrysiv.github.io/swships/"><div class="projects">Star Wars Ships</div></a>
+               <a class="link" href="https://harrysiv.github.io/expenses-chart/"><div class="projects">Expenses Tracker</div></a>
                <a class="link" href="projects/Dice/index.html"><div class="projects">D&D</div></a>
                <a class="link" href="projects/dadjokes_project/index.html"><div class="projects">Get a Dad joke</div></a>
                <a class="link" href="projects/loginwave_project/index.html"><div class="projects">Login Form</div></a>
