moved all content to one page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="style.css" defer>
       <link rel="icon" href="pictures/favicon.ico">
       <title>Homepage</title>
    </head>
@@ -46,6 +46,43 @@
             If I choose to accept a position you offer, I can garuntee that I will regualarly impress you with my progress. There is nothing I love more than a good challenge. 
             Thank you for taking the time to read about myself, and I hope to work with you in the future!
          </h3>
+         </div>
+      </div>
+      <hr>
+      <ul>
+         <li>E-Mail: harry.sandersiv@yahoo.com <em> (preferred)</em></li>
+         <li><a href="https://www.linkedin.com/in/harrysandersiv/">LinkedIn</a></li>
+      </ul>
+      <div class="projects_card">
+         <form action="mailto:harry.sandersiv@yahoo.com" method="post" enctype="text/plain">
+            <table>
+               <tr>
+                  <td><label for="">Your Name:</label></td>
+                  <td><input type="text" name="yourName" required> </td>
+               </tr>
+               <tr>
+                  <td><label for="">E-mail:</label></td>
+                  <td><input type="email" name="yourEmail" required></td>
+               </tr>
+               <tr>
+                  <td><label for="">Message:</label></td>
+                  <td><textarea name="yourMessage" cols="20" rows="4"></textarea></td>
+               </tr>
+            </table>
+            <input type="submit">
+         </form>
+      </div>
+      <div class="altcontainer">
+         <h2>Example Projects</h2>
+         <div class="flex">
+            <a class="link" href="https://harrysiv.github.io/fetchstudents-app/"><div class="projects">Students App</div></a>
+            <a class="link" href="https://harrysiv.github.io/swships/"><div class="projects">Star Wars Ships</div></a>
+            <a class="link" href="https://harrysiv.github.io/expenses-chart/"><div class="projects">Expenses Tracker</div></a>
+            <a class="link" href="projects/Dice/index.html"><div class="projects">D&D</div></a>
+            <a class="link" href="projects/dadjokes_project/index.html"><div class="projects">Get a Dad joke</div></a>
+            <a class="link" href="projects/loginwave_project/index.html"><div class="projects">Login Form</div></a>
+            <a class="link" href="projects/faq_project/index.html"><div class="projects">FAQ</div></a>
+            <a class="link" href="projects/MonsterKiller/index.html"><div class="projects">Monster Killer</div></a>
          </div>
       </div>
       <p class="copyright">© 2021 Harry Sanders.</p>
