--- a/index.html
+++ b/index.html
@@ -33,27 +33,24 @@
       </div>
          <hr>
          <div class="altcontainer">
-         <h2 class="languages">Languages: React, JavaScript, HTML, CSS, C</h2><br>
-         <h3>Welcome to my website! The purpose of this website is to showcase my ability as a developer and the progress I achieve. Please, if you have any feedback, do not hesitate to contact me. 
-            <br><br>
-            I originally went to college with the intent on acquiring a Bachelor's in Engineering, and therefore have taken quite a few math and engineering classes over the years. 
-            However, during the pandemic, I stopped pursuing a college degree for the meantime in order to learn various languages and become a developer. 
-            <br><br>
-            I find myself passionate about learning coding and enjoy applying myself and building projects and websites. I do intend to continue my education, 
-            although I believe a Bachelor's and perhaps a Masters in Computer Science is in my future. I have learned so much as I am a fast and flexible learner, 
-            and fully intend to master many different languages in hopes of eventually becoming a full-stack developer. 
-            <br><br>
-            If I choose to accept a position you offer, I can garuntee that I will regualarly impress you with my progress. There is nothing I love more than a good challenge. 
-            Thank you for taking the time to read about myself, and I hope to work with you in the future!
-         </h3>
+            <h2>Example Projects</h2>
+            <div class="flex">
+               <a class="link" href="https://harrysiv.github.io/fetchstudents-app/"><div class="projects">Students App</div></a>
+               <a class="link" href="https://harrysiv.github.io/swships/"><div class="projects">Star Wars Ships</div></a>
+               <a class="link" href="https://harrysiv.github.io/expenses-chart/"><div class="projects">Expenses Tracker</div></a>
+               <a class="link" href="projects/Dice/index.html"><div class="projects">D&D</div></a>
+               <a class="link" href="projects/dadjokes_project/index.html"><div class="projects">Get a Dad joke</div></a>
+               <a class="link" href="projects/loginwave_project/index.html"><div class="projects">Login Form</div></a>
+               <a class="link" href="projects/faq_project/index.html"><div class="projects">FAQ</div></a>
+               <a class="link" href="projects/MonsterKiller/index.html"><div class="projects">Monster Killer</div></a>
+            </div>
          </div>
-      </div>
-      <hr>
-      <ul>
-         <li>E-Mail: harry.sandersiv@yahoo.com <em> (preferred)</em></li>
-         <li><a href="https://www.linkedin.com/in/harrysandersiv/">LinkedIn</a></li>
-      </ul>
-      <div class="projects_card">
+         <div>
+         <h2 class="languages">Languages: React, JavaScript, HTML, CSS, TypeScript</h2><br>
+         <ul>
+            <h3>E-Mail: harry.sandersiv@yahoo.com <em> (preferred)</em></h3>
+            <h3><a href="https://www.linkedin.com/in/harrysandersiv/">LinkedIn</a></h3>
+         </ul>
          <form action="mailto:harry.sandersiv@yahoo.com" method="post" enctype="text/plain">
             <table>
                <tr>
@@ -72,17 +69,6 @@
             <input type="submit">
          </form>
       </div>
-      <div class="altcontainer">
-         <h2>Example Projects</h2>
-         <div class="flex">
-            <a class="link" href="https://harrysiv.github.io/fetchstudents-app/"><div class="projects">Students App</div></a>
-            <a class="link" href="https://harrysiv.github.io/swships/"><div class="projects">Star Wars Ships</div></a>
-            <a class="link" href="https://harrysiv.github.io/expenses-chart/"><div class="projects">Expenses Tracker</div></a>
-            <a class="link" href="projects/Dice/index.html"><div class="projects">D&D</div></a>
-            <a class="link" href="projects/dadjokes_project/index.html"><div class="projects">Get a Dad joke</div></a>
-            <a class="link" href="projects/loginwave_project/index.html"><div class="projects">Login Form</div></a>
-            <a class="link" href="projects/faq_project/index.html"><div class="projects">FAQ</div></a>
-            <a class="link" href="projects/MonsterKiller/index.html"><div class="projects">Monster Killer</div></a>
          </div>
       </div>
       <p class="copyright">© 2021 Harry Sanders.</p>
